--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,9 @@ body {
     color: var(--text-primary);
     line-height: 1.5;
     min-height: 100vh;
+    /* 字体平滑 */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .container {
